@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*trivdm-0_p20111010 (10 Oct 2011)
+
+  10 Oct 2011; Michael Weber <xmw@gentoo.org> +files/trivdm-0_p20111010,
+  +trivdm-0_p20111010.ebuild:
+  New version w/ more security fun
+
 *trivdm-0_p20110927 (27 Sep 2011)
 
   27 Sep 2011; Michael Weber <xmw@gentoo.org> +files/trivdm-0_p20110927,
